<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:elevation="20dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/diseaseImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:riv_corner_radius="2dp"
            android:padding="10dp"
            android:background="@drawable/rounded_corners"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/agro_ai"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/diseaseName"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:text="@string/name_of_disease"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/diseaseImage"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/diseasePercent"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:text="@string/ai_confidence_s"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/diseaseName"
            app:layout_constraintTop_toBottomOf="@id/diseaseName"/>
        <com.mckrpk.animatedprogressbar.AnimatedProgressBar
            android:id="@+id/animatedProgressBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:animationDurationInMs="1600"
            app:animationStyle="wave"
            android:paddingHorizontal="10dp"
            app:lineWidth="6dp"
            app:progressColor="@color/primary"
            app:progressTipColor="@color/red"
            app:progressTipEnabled="true"
            app:trackColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/diseasePercent"
            app:layout_constraintStart_toStartOf="@id/diseaseName"/>
        <TextView
            android:id="@+id/moreButton"
            android:layout_width="wrap_content"
            android:text="@string/click_to_know_more"
            android:textColor="@color/primary"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/animatedProgressBar"
            app:layout_constraintStart_toStartOf="@id/animatedProgressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:drawableEndCompat="@drawable/ic_forward_arrow"
            app:drawableTint="@color/primary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

</RelativeLayout>