<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EDEDED"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/monoton"
                android:gravity="center"
                android:text="@string/pdd"
                android:textColor="@color/primary"
                android:textSize="25sp" />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/toolbarCamIcon"
                android:background="@drawable/rounded_corners"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_cam__2_"
                app:tint="@color/primary" />

        </FrameLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="10dp"
            android:layout_marginTop="148dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/white"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@drawable/info"
            tools:layout_editor_absoluteX="73dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/infoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:textSize="14sp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#2CA9A9A9"
            android:textAlignment="center"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintBottom_toBottomOf="@id/imageView"
            android:text="@string/please_make_sure_that_the_plant_is_clearly_visible_and_camera_is_functioning_properly"/>
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/captureImageFab"
        android:layout_marginStart="26dp"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/select_an_image"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/captureImageFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_camera"
        app:iconTint="@color/white"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:text="@string/take_photo"
        android:backgroundTint="@color/primary"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/uploadImageFab"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadImageFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_upload"
            app:iconTint="@color/white"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/upload_photo"
            android:backgroundTint="@color/primary"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintStart_toEndOf="@id/captureImageFab"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/captureImageFab"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_disease" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>